[package]
name = "dcfmms-pool-filters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ethers = { version = "2.0.0", features = ["abigen", "ws", "ipc"] }
tokio = { version = "1.21.0", features = ["full"] }
futures = "0.3.24"
indicatif = "0.17.1"
thiserror = "1.0.36"
async-trait = "0.1.57"
serde_json = "1.0.85"
serde = "1.0.145"
num-bigfloat = "1.6.2"
uniswap_v3_math = "0.2.26"
reqwest = "0.11.14"
regex = "1.7.1"


# Dark Forestry
dcfmms = { git = "ssh://git@github.com/darkforestry/dcfmms-rs.git", branch = "main" }
